--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ roadapikey.txt
 kakaoapikey.txt
 chromedriver.exe
 password.txt
+creditcard.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
